[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/useracct.gd" type="Script" id=1]
[ext_resource path="res://images/ui/backgrounds/mmbkg.png" type="Texture" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://fonts/pixel.tres" type="DynamicFont" id=4]
[ext_resource path="res://godot-resources/bgs/button-colorable-hover.tres" type="StyleBox" id=5]
[ext_resource path="res://godot-resources/bgs/button-colorable.tres" type="StyleBox" id=6]
[ext_resource path="res://godot-resources/bgs/button-colorable-press.tres" type="StyleBox" id=7]
[ext_resource path="res://godot-resources/bgs/scroll_ui2.stylebox" type="StyleBox" id=8]
[ext_resource path="res://fonts/pixel-s.tres" type="DynamicFont" id=9]
[ext_resource path="res://animations/ui/loadingScreen/frame_09_delay-0.14s.png" type="Texture" id=10]
[ext_resource path="res://animations/ui/loadingScreen/frame_04_delay-0.14s.png" type="Texture" id=11]
[ext_resource path="res://animations/ui/loadingScreen/frame_06_delay-0.14s.png" type="Texture" id=12]
[ext_resource path="res://animations/ui/loadingScreen/frame_07_delay-0.14s.png" type="Texture" id=13]
[ext_resource path="res://animations/ui/loadingScreen/frame_02_delay-0.14s.png" type="Texture" id=14]
[ext_resource path="res://animations/ui/loadingScreen/frame_05_delay-0.14s.png" type="Texture" id=15]
[ext_resource path="res://animations/ui/loadingScreen/frame_08_delay-0.14s.png" type="Texture" id=16]
[ext_resource path="res://animations/ui/loadingScreen/frame_01_delay-0.14s.png" type="Texture" id=17]
[ext_resource path="res://animations/ui/loadingScreen/frame_00_delay-0.14s.png" type="Texture" id=18]
[ext_resource path="res://animations/ui/loadingScreen/frame_03_delay-0.14s.png" type="Texture" id=19]
[ext_resource path="res://fonts/dpcomic.ttf" type="DynamicFontData" id=20]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.6, 0.6, 0.6, 0.54902 )

[sub_resource type="GDScript" id=2]
script/source = "extends Button

onready var globalvars = get_tree().get_root().get_node(\"globalvars\")

func _pressed():
	globalvars.load_scene(\"res://scenes/menus.tscn\")
"

[sub_resource type="GDScript" id=3]
script/source = "extends Button

func _pressed():
	get_tree().quit(0)
"

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0, 0, 0.607843 )

[sub_resource type="DynamicFont" id=5]
size = 60
font_data = ExtResource( 20 )

[sub_resource type="Animation" id=6]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("TextureRect:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 18 ), ExtResource( 17 ), ExtResource( 14 ), ExtResource( 19 ), ExtResource( 11 ), ExtResource( 15 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ), ExtResource( 10 ) ]
}

[node name="useracct" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextureRect"]
anchor_left = 0.852
anchor_top = 0.924
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 0.167969
margin_top = 0.367981
text = "pre-0.1.5"
align = 2
valign = 2

[node name="Panel" type="Panel" parent="."]
anchor_right = 0.283
anchor_bottom = 1.0
margin_right = -0.578033
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="su" type="Button" parent="Panel"]
anchor_left = 0.162
anchor_top = 0.371
anchor_right = 0.838
anchor_bottom = 0.465
margin_left = -0.0320015
margin_top = -0.0244141
margin_right = 0.0319824
margin_bottom = -0.0236206
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Sign Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="li" type="Button" parent="Panel"]
anchor_left = 0.162
anchor_top = 0.53
anchor_right = 0.838
anchor_bottom = 0.624
margin_left = -0.0320015
margin_top = -0.136444
margin_right = 0.0319824
margin_bottom = -0.13559
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Log In"

[node name="sp" type="Button" parent="Panel"]
anchor_left = 0.163
anchor_top = 0.746
anchor_right = 0.839
anchor_bottom = 0.84
margin_left = 0.0820007
margin_top = 0.0718994
margin_right = 0.145935
margin_bottom = 0.072876
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Play Offline"
script = SubResource( 2 )

[node name="exit" type="Button" parent="Panel"]
anchor_left = 0.163
anchor_top = 0.871
anchor_right = 0.839
anchor_bottom = 0.965
margin_left = 0.0820007
margin_top = 0.0719604
margin_right = 0.145966
margin_bottom = 0.072876
custom_styles/hover = ExtResource( 5 )
custom_styles/pressed = ExtResource( 7 )
custom_styles/normal = ExtResource( 6 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "Quit"
script = SubResource( 3 )

[node name="TextureRect" type="TextureRect" parent="Panel"]
anchor_left = 0.206
anchor_top = 0.025
anchor_right = 0.794
anchor_bottom = 0.32
margin_left = -0.0160065
margin_top = -0.200001
margin_right = 0.0159912
margin_bottom = 0.23999
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lipanel" type="Panel" parent="."]
self_modulate = Color( 0.662745, 0.627451, 0.454902, 1 )
anchor_left = 0.392
anchor_top = 0.171
anchor_right = 0.877
anchor_bottom = 0.829
margin_left = 0.528015
margin_top = 0.171997
margin_right = 0.0180664
margin_bottom = -0.171997
custom_styles/panel = ExtResource( 8 )

[node name="liuname" type="LineEdit" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.233
anchor_right = 0.693
anchor_bottom = 0.296
margin_left = -0.234009
margin_top = -0.164948
margin_right = 0.233978
margin_bottom = 0.0200653
custom_fonts/font = ExtResource( 9 )
align = 1
placeholder_text = "Username"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lipass" type="LineEdit" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.328
anchor_right = 0.693
anchor_bottom = 0.391
margin_left = -0.234009
margin_top = -0.140045
margin_right = 0.233978
margin_bottom = 0.0449524
custom_fonts/font = ExtResource( 9 )
align = 1
secret = true
placeholder_text = "Password"

[node name="Button" type="Button" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.499
anchor_right = 0.695
anchor_bottom = 0.554
margin_left = -0.234009
margin_top = 0.00511169
margin_right = -0.0900269
margin_bottom = 0.230133
custom_fonts/font = ExtResource( 9 )
text = "Log In"

[node name="Button2" type="Button" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.578
anchor_right = 0.695
anchor_bottom = 0.634
margin_left = -0.234009
margin_top = 0.110138
margin_right = -0.0900269
margin_bottom = -0.169861
custom_fonts/font = ExtResource( 9 )
text = "Cancel"

[node name="CheckBox" type="CheckBox" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.42
anchor_right = 0.693
anchor_bottom = 0.479
margin_left = -0.234009
margin_top = -0.0998993
margin_right = 0.233978
margin_bottom = 0.105103
custom_fonts/font = ExtResource( 9 )
text = "Remember Me"
align = 1

[node name="errorMessage" type="Label" parent="lipanel"]
anchor_left = 0.307
anchor_top = 0.657
anchor_right = 0.693
anchor_bottom = 0.721
margin_left = -0.234009
margin_top = 0.715149
margin_right = 0.233978
margin_bottom = 0.395203
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.815686, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="supanel" type="Panel" parent="."]
self_modulate = Color( 0.662745, 0.627451, 0.454902, 1 )
anchor_left = 0.392
anchor_top = 0.171
anchor_right = 0.877
anchor_bottom = 0.829
margin_left = 0.528015
margin_top = 0.171997
margin_right = 0.0180664
margin_bottom = -0.172974
custom_styles/panel = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="suuname" type="LineEdit" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.122
anchor_right = 0.693
anchor_bottom = 0.185
margin_left = -0.234009
margin_top = -0.109959
margin_right = 0.233978
margin_bottom = 0.0750504
custom_fonts/font = ExtResource( 9 )
align = 1
placeholder_text = "Username"

[node name="suemail" type="LineEdit" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.205
anchor_right = 0.693
anchor_bottom = 0.268
margin_left = -0.234009
margin_top = -0.0249786
margin_right = 0.233978
margin_bottom = 0.160034
custom_fonts/font = ExtResource( 9 )
align = 1
placeholder_text = "Email"

[node name="supass" type="LineEdit" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.286
anchor_right = 0.693
anchor_bottom = 0.35
margin_left = -0.234009
margin_top = 0.0699463
margin_right = 0.233978
margin_bottom = -0.250046
custom_fonts/font = ExtResource( 9 )
align = 1
secret = true
placeholder_text = "Password"

[node name="supassconfirm" type="LineEdit" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.365
anchor_right = 0.693
anchor_bottom = 0.429
margin_left = -0.234009
margin_top = 0.174957
margin_right = 0.233978
margin_bottom = -0.145035
custom_fonts/font = ExtResource( 9 )
align = 1
secret = true
placeholder_text = "Confirm Password"

[node name="Button" type="Button" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.499
anchor_right = 0.695
anchor_bottom = 0.554
margin_left = -0.234009
margin_top = 0.00511169
margin_right = -0.0900269
margin_bottom = 0.230133
custom_fonts/font = ExtResource( 9 )
text = "Sign Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.578
anchor_right = 0.695
anchor_bottom = 0.634
margin_left = -0.234009
margin_top = 0.110138
margin_right = -0.0900269
margin_bottom = -0.169861
custom_fonts/font = ExtResource( 9 )
text = "Cancel"

[node name="CheckBox" type="CheckBox" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.432
anchor_right = 0.693
anchor_bottom = 0.491
margin_left = -0.234009
margin_top = -0.159912
margin_right = 0.233978
margin_bottom = 0.0450897
custom_fonts/font = ExtResource( 9 )
text = "Remember Me"
align = 1

[node name="errorMessage" type="Label" parent="supanel"]
anchor_left = 0.307
anchor_top = 0.657
anchor_right = 0.693
anchor_bottom = 0.721
margin_left = -0.234009
margin_top = 0.215546
margin_right = 0.233978
margin_bottom = -0.104401
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.815686, 0, 0, 1 )
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="statusPanel" type="Panel" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 4 )

[node name="Label" type="Label" parent="statusPanel"]
anchor_left = 0.341
anchor_top = 0.335
anchor_right = 0.659
anchor_bottom = 0.418
margin_left = 0.19397
margin_top = -0.279999
margin_right = -0.194031
margin_bottom = -0.0240173
custom_fonts/font = SubResource( 5 )
text = "Logging you in..."
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="statusPanel"]
anims/lsicon = SubResource( 6 )

[node name="TextureRect" type="TextureRect" parent="statusPanel"]
anchor_left = 0.438
anchor_top = 0.434
anchor_right = 0.562
anchor_bottom = 0.574
margin_left = 0.191956
margin_top = -0.312012
margin_right = -0.192078
margin_bottom = 0.167999
texture = ExtResource( 18 )
expand = true
[connection signal="pressed" from="Panel/su" to="." method="showSignup"]
[connection signal="pressed" from="Panel/li" to="." method="showLogin"]
[connection signal="pressed" from="lipanel/Button" to="." method="loginUser"]
[connection signal="pressed" from="lipanel/Button2" to="." method="hideLogin"]
[connection signal="pressed" from="supanel/Button" to="." method="signupUser"]
[connection signal="pressed" from="supanel/Button2" to="." method="hideSignup"]
